--- a/sass/_content.sass
+++ b/sass/_content.sass
@@ -24,14 +24,12 @@
     background: rgb(17, 17, 17)
     transition: background 300ms ease 0s
     height: 68px
-    -webkit-box-align: center
     align-items: center
 
 .css-n3cej3
     display: flex
     flex-direction: row
     flex: 4 1 0%
-    -webkit-box-align: center
     align-items: center
     gap: 16px
 
@@ -55,25 +53,20 @@
     display: flex
     flex-direction: row
     flex: 1.5 1 0%
-    -webkit-box-pack: end
     justify-content: flex-end
-    -webkit-box-align: center
     align-items: center
     gap: 0px
 
 .css-1d7dhat
     position: relative
     display: flex
-    -webkit-box-align: center
     align-items: center
-    -webkit-box-pack: center
     justify-content: center
 
 .css-1r9kwv0
     display: flex
     flex-direction: row
     gap: 4px
-    -webkit-box-align: center
     align-items: center
 
 .css-12mq65g
@@ -89,7 +82,6 @@
     line-height: 1.625rem
     font-weight: normal
     letter-spacing: 0.02rem
-    font-family: 'Poppins', sans-serif
 
 .css-v0zrd7
     margin: 0px
@@ -97,12 +89,10 @@
     line-height: 1.3125rem
     font-weight: normal
     letter-spacing: 0.02rem
-    font-family: 'Poppins', sans-serif
     color: rgb(163, 163, 163)
 
 .css-dxt8m4
     display: flex
-    -webkit-box-align: center
     align-items: center
     user-select: none
     transition: opacity 0.2s ease-in-out 0s
@@ -111,7 +101,6 @@
     position: relative
 .css-1hki280
     display: flex
-    -webkit-box-align: center
     align-items: center
     height: 18px
 
@@ -137,14 +126,12 @@
     padding-left: 8px
     padding-right: 8px
     display: flex
-    -webkit-box-align: center
     align-items: center
     color: rgb(255, 165, 203)
     transition: all 0.3s ease 0s
 
 .css-1mhrmsa
     margin: 0px
-    font-family: 'Poppins', sans-serif
     font-size: 0.6875rem
     line-height: 1.125rem
     font-weight: normal
@@ -165,9 +152,7 @@
     border-radius: 12px
     overflow: hidden
     display: flex
-    -webkit-box-pack: center
     justify-content: center
-    -webkit-box-align: center
     align-items: center
 
 .css-xrr8tt
@@ -187,9 +172,7 @@
     transition: all 0.3s ease 0s
     overflow: hidden
     display: flex
-    -webkit-box-pack: center
     justify-content: center
-    -webkit-box-align: center
     align-items: center
 
 @keyframes animation-3oftuj
@@ -206,9 +189,7 @@
     transition: all 0.3s ease 0s
     overflow: hidden
     display: flex
-    -webkit-box-pack: center
     justify-content: center
-    -webkit-box-align: center
     align-items: center
 
 .css-xrr8tt
@@ -226,7 +207,6 @@
 .css-2tztx7
     display: flex
     flex-direction: row
-    -webkit-box-align: center
     align-items: center
     gap: 4px
     border-radius: 20px
@@ -236,7 +216,6 @@
 .css-u4p24i
     display: flex
     flex-direction: row
-    -webkit-box-align: center
     align-items: center
 
 .css-kqdrv3
@@ -244,7 +223,6 @@
     font-size: 0.6875rem
     font-weight: normal
     letter-spacing: 0.02rem
-    font-family: 'Poppins', sans-serif
     line-height: 11px
     color: rgb(255, 177, 142)
 
@@ -257,13 +235,11 @@
 .css-8v90jo
     display: flex
     flex-direction: row
-    -webkit-box-align: center
     align-items: center
     gap: 8px
 
 .css-1erriky
     margin: 0px
-    font-family: 'Poppins', sans-serif
     font-size: 1rem
     line-height: 1.625rem
     font-weight: normal
@@ -272,7 +248,6 @@
 .css-1so0477
     display: flex
     flex-direction: row
-    -webkit-box-align: center
     align-items: center
     color: rgba(255, 255, 255, 0.6)
     gap: 4px
@@ -283,7 +258,6 @@
     line-height: 1.125rem
     font-weight: normal
     letter-spacing: 0.02rem
-    font-family: 'Poppins', sans-serif
     color: rgba(255, 255, 255, 0.6)
 
 .css-vubbuv
@@ -302,18 +276,15 @@
     line-height: 1.125rem
     font-weight: normal
     letter-spacing: 0.02rem
-    font-family: 'Poppins', sans-serif
     color: rgba(255, 255, 255, 0.6)
 
 .css-u4p24i
     display: flex
     flex-direction: row
-    -webkit-box-align: center
     align-items: center
 
 .css-1ce2smr
     margin: 0px
-    font-family: 'Poppins', sans-serif
     font-size: 0.6875rem
     line-height: 1.125rem
     font-weight: normal
@@ -326,5 +297,115 @@
     line-height: 1.125rem
     font-weight: normal
     letter-spacing: 0.02rem
-    font-family: 'Poppins', sans-serif
     color: rgba(255, 255, 255, 0.6)
+
+.css-fjcmtc:hover
+    outline: rgb(255, 156, 104) solid 1px
+    outline-offset: -1px
+
+.css-1bkxtup
+    display: flex
+    flex-direction: row
+    flex: 1.5 1 0%
+
+.css-1hqc7wo
+    margin: 0px
+    font-size: 1rem
+    line-height: 1.625rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    align-self: center
+
+.css-uq7dtg
+    display: flex
+    flex-direction: column
+    flex: 2 1 0%
+
+.css-c4sutr
+    height: auto
+    overflow: visible
+    transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
+
+.css-hboir5
+    display: flex
+    width: 100%
+
+.css-8atqhb
+    width: 100%
+
+.css-3jdy22
+    display: flex
+    flex-direction: row
+    gap: 8px
+
+.css-hp68mp
+    display: flex
+    flex-direction: row
+    gap: 8px
+    align-items: center
+
+.css-v0zrd7
+    margin: 0px
+    font-size: 0.8125rem
+    line-height: 1.3125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: rgb(163, 163, 163)
+
+.css-wwkw3j
+    display: flex
+    flex-direction: row
+    flex: 1.5 1 0%
+    justify-content: flex-end
+    align-items: center
+    gap: 0px
+
+.css-n3cej3
+    display: flex
+    flex-direction: row
+    flex: 4 1 0%
+    align-items: center
+    gap: 16px
+
+.css-n3cej3
+    display: flex
+    flex-direction: row
+    flex: 4 1 0%
+    align-items: center
+    gap: 16px
+
+.css-1r9kwv0
+    display: flex
+    flex-direction: row
+    gap: 4px
+    align-items: center
+
+.css-1r9kwv0
+    display: flex
+    flex-direction: row
+    gap: 4px
+    align-items: center
+
+.css-xymnl5:hover
+    background: rgb(34, 34, 34)
+
+.css-7wkbxh
+    margin: 0px
+    font-size: 0.8125rem
+    line-height: 1.3125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: rgb(163, 163, 163)
+
+@media (max-width: 959.95px)
+    .css-xymnl5
+        padding: 24px
+        height: 100%
+        gap: 4px
+        flex-direction: column
+        align-items: flex-start
+
+    .css-fjcmtc
+        border-bottom: 1px solid rgb(89, 89, 89)
+
+    .css-uq7dtg
