--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,11 +1,11 @@
 .header
-    // position: fixed
+    position: fixed
     left: 0
     width: 100%
     padding: 14px 0
     z-index: 9999
     background-color: rgba(0, 0, 0, 0.6)
-    backdrop-filter: blur(20px)
+    backdrop-filter: blur(5px)
     top: 0
 
     .wrap
