--- a/sass/_headline.sass
+++ b/sass/_headline.sass
@@ -17,7 +17,6 @@
         gap: 4px
         cursor: pointer
         transition: opacity 0.4s ease 0s
-        -webkit-box-align: center
         align-items: center
         color: rgb(163, 163, 163)
     &-15zk5zo
@@ -27,31 +26,32 @@
         gap: 4px
         cursor: pointer
         transition: opacity 0.4s ease 0s
-        -webkit-box-align: center
         align-items: center
         color: rgb(163, 163, 163)
 
-.css-1sbz38f
-    display: flex
-    flex: 1.5 1 0%
-    flex-direction: row
-    gap: 4px
-    cursor: pointer
-    transition: opacity 0.4s ease 0s
-    -webkit-box-align: center
-    align-items: center
-    color: rgb(163, 163, 163)
+    &-1sbz38f
+        display: flex
+        flex: 1.5 1 0%
+        flex-direction: row
+        gap: 4px
+        cursor: pointer
+        transition: opacity 0.4s ease 0s
+        align-items: center
+        color: rgb(163, 163, 163)
 
-.css-6f4rlc
-    display: flex
-    flex: 2 1 0%
-    flex-direction: row
-    gap: 4px
-    cursor: pointer
-    transition: opacity 0.4s ease 0s
-    -webkit-box-align: center
-    align-items: center
-    color: rgb(163, 163, 163)
+    &-6f4rlc
+        display: flex
+        flex: 2 1 0%
+        flex-direction: row
+        gap: 4px
+        cursor: pointer
+        transition: opacity 0.4s ease 0s
+        align-items: center
+        color: rgb(163, 163, 163)
 
-.css-1ih4w1z
-    flex: 1.5 1 0%
+    &-1ih4w1z
+        flex: 1.5 1 0%
+
+@media (max-width: 959.95px)
+    .main-headline 
+        display: none
