--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,6 +9,18 @@
     position: relative
     z-index: 1
     min-height: 100vh
+    padding: 24px 0
+    .container
+        max-width: 1092px
+
+    .h5
+        margin: 0 0 24px
+        font-size: 1.4375rem
+        line-height: 2.3125rem
+        font-weight: normal
+        letter-spacing: 0.02rem
+        font-weight: 500
+
     &::before
         content: ''
         opacity: 0.5
@@ -16,16 +28,18 @@
         width: 100%
         height: 100%
         position: fixed
+        pointer-events: none
         z-index: -1
         top: 200px
         background: linear-gradient(182deg, #000 -10.01%, rgba(255, 106, 151, 0.30) 46.81%, rgba(255, 236, 68, 0.30) 81.93%)
-
     &::after
         content: ''
         position: fixed
+        pointer-events: none
         left: 0
         width: 100%
         height: 100%
+        bottom: 0
         background-image: url('../img/background-mountain.svg')
         background-repeat: no-repeat
         background-position: center bottom
