--- a/sass/_content.sass
+++ b/sass/_content.sass
@@ -397,7 +397,7 @@
     letter-spacing: 0.02rem
     color: rgb(163, 163, 163)
 
-@media (max-width: 959.95px)
+@media (max-width: 850px)
     .css-xymnl5
         padding: 24px
         height: 100%
@@ -409,3 +409,195 @@
         border-bottom: 1px solid rgb(89, 89, 89)
 
     .css-uq7dtg
+
+.css-us2jy7
+    display: flex
+    flex-direction: row
+    background: rgb(17, 17, 17)
+    border-bottom: 1px solid rgb(89, 89, 89)
+    padding: 20px 32px
+
+    &:last-of-type
+        border-bottom: none
+
+.css-1fn1rmh
+    text-decoration: none
+
+.css-1hdfonc
+    display: flex
+    flex-direction: row
+    flex: 2.5 1 0%
+    align-items: center
+
+@media (min-width: 0px)
+    .css-1hdfonc
+        gap: 8px
+
+@media (min-width: 960px)
+    .css-1hdfonc
+        gap: 16px
+
+.css-1i8k1gd
+    border-radius: 50%
+    outline-offset: -1.5px
+
+.css-vvufw5
+    margin: 0px
+    font-size: 1rem
+    line-height: 1.625rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: rgb(255, 255, 255)
+
+.css-dxt8m4
+    display: flex
+    align-items: center
+    user-select: none
+    transition: opacity 0.2s ease-in-out 0s
+
+.css-79elbk
+    position: relative
+
+.css-1hki280
+    display: flex
+    align-items: center
+    height: 18px
+
+.css-1kby21v
+    padding: 1px
+    border-radius: 4px
+    height: 18px
+    z-index: 20
+
+.css-ot23c2
+    background: rgb(31, 33, 40)
+    border-radius: 10px
+    height: 16px
+    padding-left: 8px
+    padding-right: 8px
+    display: flex
+    align-items: center
+    color: rgb(255, 165, 203)
+    transition: all 0.3s ease 0s
+
+.css-1mhrmsa
+    margin: 0px
+    font-size: 0.6875rem
+    line-height: 1.125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+
+.css-jhcsam
+    position: absolute
+    inset: 0px
+    z-index: 10
+    background: linear-gradient(90deg, rgb(255, 124, 179) 0%, rgb(212, 255, 89) 100%)
+    border-radius: 12px
+    opacity: 0.7
+    transition: all 0.3s ease 0s
+    overflow: hidden
+    display: flex
+    justify-content: center
+    align-items: center
+
+.css-xrr8tt
+    background: linear-gradient(90deg, rgb(255, 124, 179) 33%, rgb(212, 255, 89) 66%)
+    min-width: 300%
+    min-height: 300%
+    transition: all 0.3s ease 0s
+    animation: 10s ease 0s infinite normal none running animation-3oftuj
+
+@media (min-width: 0px)
+    .css-rurlj0
+        gap: 4px
+
+@media (min-width: 960px)
+    .css-rurlj0
+        gap: unset
+
+@media (min-width: 600px)
+    .css-1hg59ch
+        display: none
+
+.css-c89it3
+    margin: 0px
+    font-size: 0.6875rem
+    line-height: 1.125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: rgba(255, 255, 255, 0.6)
+
+.css-ct9q29
+    display: flex
+    flex-direction: row
+    align-items: center
+    gap: 4px
+
+.css-vubbuv
+    user-select: none
+    width: 1em
+    height: 1em
+    display: inline-block
+    fill: currentcolor
+    flex-shrink: 0
+    transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
+    font-size: 1.5rem
+
+.css-rurlj0
+    display: flex
+    flex-direction: column
+    flex: 2 1 0%
+    justify-content: center
+
+@media (min-width: 960px)
+    .css-wkqk46
+        gap: 2px
+
+@media (min-width: 0px)
+    .css-wkqk46
+        gap: 4px
+
+.css-wkqk46
+    display: flex
+    flex-direction: column
+    flex: 2 1 0%
+    justify-content: center
+
+@media (min-width: 600px)
+    .css-1hg59ch
+        display: none
+
+.css-8v90jo
+    display: flex
+    flex-direction: row
+    align-items: center
+    gap: 8px
+
+.css-c89it3
+    margin: 0px
+    font-size: 0.6875rem
+    line-height: 1.125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: rgba(255, 255, 255, 0.6)
+
+.css-o38pos
+    margin: 0px
+    font-size: 1rem
+    line-height: 1.625rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: rgb(255, 255, 255)
+
+.css-1ce2smr
+    margin: 0px
+    font-size: 0.6875rem
+    line-height: 1.125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: rgba(255, 255, 255, 0.6)
+
+.css-us2jy7:hover
+    background: rgb(34, 34, 34)
+    outline: rgb(255, 156, 104) solid 1px
+    outline-offset: -1px
