--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -1,82 +1,30 @@
-footer
+.footer
+    padding: 14px
+    background-color: #000
     position: relative
-    padding-bottom: 80px
-    .container
-        border-top: 1px solid #595959
-        padding-top: 80px
-        align-items: flex-start
+    z-index: 111
+    nav
 
-    a
-        display: block
-        font-size: 0.875rem
-        line-height: 1.375rem
-        padding: 5px 0
-        text-decoration: none
-        padding-right: 24px
-        position: relative
-        &:hover
-            color: $prime
-
-        &:not(.soc a, .btn)
-            &::after
-                content: ''
-                display: inline-block
-                vertical-align: middle
-                height: 16px
-                margin-left: 4px
-                width: 16px
-                background-image: url('../img/arr.svg')
-                background-repeat: no-repeat
-                background-position: center right
-                background-size: 100% auto
-
-    .heading
-        font-size: 1rem
-        line-height: 1.625rem
-        font-weight: 500
-        margin-bottom: 11px
-
-    .logo
-        margin-bottom: 20px
-
-    .col
-        min-width: 15%
-        &:first-child
-            margin: 0 auto 0 0
-        &:nth-child(2)
-            margin: 0 0 0 auto
-
-        &:last-child
-            min-width: unset
+        a
+            font-size: 13px
+            padding: 10px
+            text-decoration: none
 
     .soc
-        display: flex
         gap: 24px
+        a
+            display: block
+
         img
             display: block
 
-        a 
+    @media screen and ( max-width: 600px )
+        padding: 20px 10px 20px
+
+        .container
+            justify-content: center
+            max-width: 500px
             padding: 0
 
-    @media screen and ( max-width: 1000px )
-        .container
-            justify-content: flex-start
-            padding-bottom: 80px
-        .col
-            min-width: 40% !important
-            margin: 0 0 30px !important
-            &:first-child
-                width: 100%
-            &:last-child
-                display: none
-
-        &:last-child
-            min-width: unset
-        .soc
-            position: absolute
-            bottom: 0
-            left: 24px
-
-        a
-            font-size: 0.75rem
-            line-height: 18px
+        nav
+            margin-bottom: 10px
