--- a/sass/_headline.sass
+++ b/sass/_headline.sass
@@ -52,6 +52,51 @@
     &-1ih4w1z
         flex: 1.5 1 0%
 
-@media (max-width: 959.95px)
-    .main-headline 
+@media (max-width: 850px)
+    .main-headline
         display: none
+
+.css-b9w1u9
+    display: flex
+    flex-direction: row
+    width: calc(100% - 2px)
+    margin-top: 16px
+    padding: 4px 40px 8px
+    background-color: transparent
+    backdrop-filter: blur(2px)
+    position: sticky
+    z-index: 3
+    top: 64px
+    border: 1px
+
+.css-x97obs
+    display: flex
+    flex: 2.5 1 0%
+    flex-direction: row
+    gap: 4px
+    cursor: pointer
+    transition: opacity 0.4s ease 0s
+    -webkit-box-align: center
+    align-items: center
+    color: rgb(163, 163, 163)
+
+.css-1q9qcw5
+    margin: 0px
+    font-size: 0.6875rem
+    line-height: 1.125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    font-family: Poppins
+    color: rgb(163, 163, 163)
+    user-select: none
+
+.css-6f4rlc
+    display: flex
+    flex: 2 1 0%
+    flex-direction: row
+    gap: 4px
+    cursor: pointer
+    transition: opacity 0.4s ease 0s
+    -webkit-box-align: center
+    align-items: center
+    color: rgb(163, 163, 163)
