--- a/sass/_modal.sass
+++ b/sass/_modal.sass
@@ -18,12 +18,13 @@
         top: 50%
         left: 50%
         transform: translate(-50%, -50%)
-        background-color: #fff
+        background-color: rgb(17, 17, 17)
         max-width: 530px
         color: $black
         text-align: left
-        padding: 50px 
-        border-radius: 60px
+        padding: 30px 20px 50px
+        text-align: center
+        border-radius: 0
         overflow-y: scroll
         -ms-overflow-style: none
         scrollbar-width: none
@@ -33,40 +34,25 @@
             height: 0
 
         h3
-            
-            font-size: 28px
+
+            font-size: 16px
             text-align: center
             margin-bottom: 25px
-
-        p
-            margin: 0
-
-        .wrap
-            margin-bottom: 10px
-            fieldset
-                width: 49%
-        
-        .mt 
-            margin-top: 10px
+            color: #fff
 
         .btn
             margin-top: 5px
-            min-width: 48%
+            padding: 8px 22px
 
-        .inp-wrap
-            margin-bottom: 15px
-            width: 100%
-            input
-                margin: 0
 
     &-close
         position: absolute
         top: 22px
         right: 32px
         border-radius: 50%
-        font-size: 19px
-        background-color: rgba($black, .2)
-        color: $black
+        font-size: 24px
+        background-color: rgba(#fff, .2)
+        color: #fff
         line-height: 38px
         width: 36px
         height: 36px
@@ -80,45 +66,23 @@
 
     @media screen and ( max-width: 1170px )
         &-content
-            padding: 50px 30px 55px
+            padding: 30px 20px 40px
+            img 
+                max-width: 45%
+
 
         &-close
             top: 24px
             right: 24px
-            line-height: 25px
+            line-height: 30px
             width: 30px
             height: 30px
             font-size: 14px
 
     @media screen and ( max-width: 700px )
-        &-content
-            padding: 40px 30px 35px
-            border-radius: 30px
-            .inp-wrap
-                width: 100%
 
-            p
-                margin-bottom: 20px
-
-            .btn
-                width: 100%
-
-            .form
-                margin-top: 20px
 
         &-close
             top: 10px
             right: 16px
-            line-height: 25px
             font-size: 20px
-
-@keyframes slideRight
-    0%
-        transform: translateX(-100%)
-    100%
-        transform: translateX(0%)
-@keyframes slideRightOut
-    0%
-        transform: translateX(0%)
-    100%
-        transform: translateX(-100%)
