--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,7 @@
     z-index: 1
     min-height: 100vh
     padding: 24px 0
+    overflow: hidden
     .container
         max-width: 1092px
 
@@ -45,5 +46,10 @@
         background-position: center bottom
         background-size: 100% auto
 
+    &-point-sharing
+        display: block
+        margin: 0 0 24px
+
 @import 'headline'
 @import 'content'
+@import 'footer'
