--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -14,7 +14,7 @@
     .container
         position: static
 
-    &__icon 
+    &__icon
         width: 25px
         height: 25px
         margin-right: 16px
@@ -30,11 +30,6 @@
 
     nav
         margin: 0 20px 0 auto
-        hr
-            height: 22px
-            width: 1px
-            margin: 0 10px
-            background-color: #595959
 
         a
             display: inline-block
@@ -44,38 +39,52 @@
             position: relative
             font-weight: 400
             z-index: 1
-            padding: 10px 15px 10px 14px
             margin: 0 10px
             opacity: .8
-            &::before
-                content: ''
-                display: inline-block
-                background-color: #E0793B
-                width: 6px
-                height: 6px
-                border-radius: 50%
-                position: absolute
-                left: 0
-                top: 50%
-                margin-top: -3px
-                opacity: 0
-                transition: inherit
-
-            &:hover,
-            &.is__active
-                font-weight: 500
-                opacity: 1
+        hr
+            display: none
+        @media screen and ( min-width: 1000px )
+            hr
+                display: block
+                height: 22px
+                width: 1px
+                margin: 0 10px
+                background-color: #595959
+            a
+                padding: 10px 15px 10px 14px
                 &::before
-                    opacity: 1
+                    content: ''
+                    display: inline-block
+                    background-color: #E0793B
+                    width: 6px
+                    height: 6px
+                    border-radius: 50%
+                    position: absolute
+                    left: 0
+                    top: 50%
+                    margin-top: -3px
+                    opacity: 0
+                    transition: inherit
 
-            img
-                margin-left: 3px
+                &:hover,
+                &.is__active
+                    font-weight: 500
+                    opacity: 1
+                    &::before
+                        opacity: 1
+
+                img
+                    margin-left: 3px
 
     @media screen and ( max-width: 1000px )
+        &__icon 
+            margin-left: auto
+    
+
         nav.wrap
             position: fixed
             top: 0
-            right: 0
+            left: 0
             z-index: 999
             width: 100%
             height: 100vh
@@ -110,7 +119,7 @@
             img
                 display: none
 
-            &.active
+            &.is__active
                 transform: translateX(0)
                 opacity: 1
                 visibility: visible
