--- a/sass/_tab.sass
+++ b/sass/_tab.sass
@@ -15,6 +15,7 @@
         display: flex
         align-items: center
         gap: 8px
+        white-space: nowrap
         padding: 12px 16px
         border-bottom: 1px solid rgba(0, 0, 0, 0)
         img
@@ -27,5 +28,18 @@
 
         &.is__active
             color: $prime
-            border-color: $prime 
+            border-color: $prime
 
+    @media (max-width: 850px)
+        &-btns
+            width: 100vw
+            position: relative
+            left: -15px
+            padding: 0 15px
+            overflow-x: scroll
+            -ms-overflow-style: none
+            scrollbar-width: none
+            &::-webkit-scrollbar
+                display: none
+                width: 0
+                height: 0
