--- a/sass/_content.sass
+++ b/sass/_content.sass
@@ -57,6 +57,12 @@
     align-items: center
     gap: 0px
 
+.css-1vd84sn
+    display: flex
+    flex-direction: row
+    justify-content: center
+    align-items: center
+
 .css-1d7dhat
     position: relative
     display: flex
@@ -73,7 +79,6 @@
     display: flex
     flex-direction: row
     gap: 4px
-    -webkit-box-align: baseline
     align-items: baseline
 
 .css-1qeiy3n
@@ -90,12 +95,6 @@
     font-weight: normal
     letter-spacing: 0.02rem
     color: rgb(163, 163, 163)
-
-.css-dxt8m4
-    display: flex
-    align-items: center
-    user-select: none
-    transition: opacity 0.2s ease-in-out 0s
 
 .css-79elbk
     position: relative
@@ -230,12 +229,6 @@
     display: flex
     flex-direction: row
     flex: 3 1 0%
-    gap: 8px
-
-.css-8v90jo
-    display: flex
-    flex-direction: row
-    align-items: center
     gap: 8px
 
 .css-1erriky
@@ -421,6 +414,7 @@
         border-bottom: none
 
 .css-1fn1rmh
+    display: block
     text-decoration: none
 
 .css-1hdfonc
@@ -543,6 +537,11 @@
     transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
     font-size: 1.5rem
 
+.css-1wili8m
+    display: flex
+    flex-direction: column
+    border: 1px solid rgb(89, 89, 89)
+
 .css-rurlj0
     display: flex
     flex-direction: column
@@ -601,3 +600,216 @@
     background: rgb(34, 34, 34)
     outline: rgb(255, 156, 104) solid 1px
     outline-offset: -1px
+
+@media (max-width: 599.95px)
+    .css-us2jy7
+        flex-wrap: wrap
+        padding: 16px
+        row-gap: 16px
+
+    .css-1fn1rmh
+        border-bottom: 1px solid rgb(89, 89, 89)
+
+    .css-1hdfonc:nth-of-type(1)
+        order: 1
+        flex-basis: 75%
+
+    .css-rurlj0:nth-of-type(2)
+        order: 3
+
+    .css-wkqk46:nth-of-type(3)
+        order: 4
+
+    .css-wkqk46:nth-of-type(4)
+        order: 5
+
+    .css-hpwt1:nth-of-type(5)
+        order: 2
+        flex-basis: 25%
+
+    .css-ubmkps
+        display: none
+
+.css-gtfp90
+    display: -ms-flexbox
+    display: flex
+    flex-direction: row
+    padding: 16px
+    gap: 16px
+
+.css-b95f0i
+    display: flex
+    flex-direction: column
+    -webkit-flex: 1
+    -ms-flex: 1
+    flex: 1
+
+.css-c89it3
+    margin: 0
+    font-size: 0.6875rem
+    line-height: 1.125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: rgba(255, 255, 255, 0.6)
+
+.css-1xqhlnt
+    display: flex
+    flex-direction: column
+    flex: 5
+
+.css-6f4rlc
+    display: flex
+    flex-direction: column
+    -webkit-flex: 2
+    -ms-flex: 2
+    flex: 2
+    -webkit-flex-direction: row
+    -ms-flex-direction: row
+    flex-direction: row
+    gap: 4px
+    cursor: pointer
+    -webkit-transition: opacity 0.4s ease
+    transition: opacity 0.4s ease
+    -webkit-align-items: center
+    -ms-flex-align: center
+    align-items: center
+    color: #A3A3A3
+
+.css-1q9qcw5
+    margin: 0
+    font-size: 0.6875rem
+    line-height: 1.125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: #A3A3A3
+    -webkit-user-select: none
+    -moz-user-select: none
+    -ms-user-select: none
+    user-select: none
+
+.css-1hnws38
+    display: flex
+    flex-direction: column
+    width: 100%
+    border: 1px solid rgb(89, 89, 89)
+
+.css-16k6ata
+    display: flex
+    width: 100%
+    background: rgb(17, 17, 17)
+    flex-direction: row
+    align-items: center
+    padding: 24px 16px
+    border-bottom: 1px solid rgb(89, 89, 89)
+    overflow: hidden
+    cursor: pointer
+    gap: 16px
+
+.css-api3z4
+    display: flex
+    flex-direction: column
+    flex: 1 1 0%
+    align-items: center
+
+.css-1qb06bc
+    width: 36px
+    height: 36px
+    min-width: 36px
+    min-height: 36px
+
+.css-1qb06bc div
+    display: flex
+
+.css-1qb06bc svg
+    width: 100%
+    height: 100%
+
+.css-1xqhlnt
+    display: flex
+    flex-direction: column
+    flex: 5
+
+.css-1d7dhat
+    position: relative
+    display: flex
+    align-items: center
+    justify-content: center
+
+.css-1kkt86i
+    display: flex
+    flex-direction: column
+    gap: 4px
+
+.css-1r9kwv0
+    display: flex
+    flex-direction: row
+    gap: 4px
+    align-items: center
+
+.css-fhxiwe
+    display: flex
+    flex-direction: row
+    gap: 4px
+
+.css-h94jzx
+    margin: 0
+    font-size: 0.8125rem
+    line-height: 1.3125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+
+.css-1x8f5vi
+    margin: 0px
+    font-size: 0.6875rem
+    line-height: 1.125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: rgb(163, 163, 163)
+
+.css-uq7dtg
+    display: flex
+    flex-direction: column
+    flex: 2 1 0%
+
+.css-ge8ueo
+    margin: 0
+    font-size: 0.8125rem
+    line-height: 1.3125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+
+.css-1oq29p3
+    margin: 0
+    font-size: 0.8125rem
+    line-height: 1.3125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: rgb(132, 255, 159)
+
+.css-1x8f5vi
+    margin: 0px
+    font-size: 0.6875rem
+    line-height: 1.125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    color: rgb(163, 163, 163)
+
+.css-16k6ata:hover
+    outline: rgb(255, 156, 104) solid 1px
+    outline-offset: -1px
+    background: rgb(34, 34, 34)
+
+.css-8v90jo
+    display: flex
+    flex-direction: row
+    -webkit-box-align: center
+    align-items: center
+    gap: 8px
+
+.css-hxoxwd
+    margin: 0px
+    font-size: 0.6875rem
+    line-height: 1.125rem
+    font-weight: normal
+    letter-spacing: 0.02rem
+    font-family: Poppins
