--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -66,6 +66,8 @@
                     opacity: 0
                     transition: inherit
 
+                &.is__active
+                    pointer-events: none
                 &:hover,
                 &.is__active
                     font-weight: 500
