--- a/sass/_headline.sass
+++ b/sass/_headline.sass
@@ -39,22 +39,12 @@
         align-items: center
         color: rgb(163, 163, 163)
 
-    &-6f4rlc
-        display: flex
-        flex: 2 1 0%
-        flex-direction: row
-        gap: 4px
-        cursor: pointer
-        transition: opacity 0.4s ease 0s
-        align-items: center
-        color: rgb(163, 163, 163)
-
     &-1ih4w1z
         flex: 1.5 1 0%
 
 @media (max-width: 850px)
     .main-headline
-        display: none
+        display: none !important
 
 .css-b9w1u9
     display: flex
@@ -74,9 +64,7 @@
     flex: 2.5 1 0%
     flex-direction: row
     gap: 4px
-    cursor: pointer
     transition: opacity 0.4s ease 0s
-    -webkit-box-align: center
     align-items: center
     color: rgb(163, 163, 163)
 
@@ -86,7 +74,6 @@
     line-height: 1.125rem
     font-weight: normal
     letter-spacing: 0.02rem
-    font-family: Poppins
     color: rgb(163, 163, 163)
     user-select: none
 
@@ -95,8 +82,6 @@
     flex: 2 1 0%
     flex-direction: row
     gap: 4px
-    cursor: pointer
     transition: opacity 0.4s ease 0s
-    -webkit-box-align: center
     align-items: center
     color: rgb(163, 163, 163)
