--- a/sass/_content.sass
+++ b/sass/_content.sass
@@ -751,6 +751,9 @@
     flex-direction: row
     gap: 4px 
 
+span.modal-el-desc
+    max-width: 60px !important
+
 .css-h94jzx
     margin: 0
     font-size: 0.8125rem
